fix(layout): hide slotted content entirely when collapsed #71

--- a/src/style.scss
+++ b/src/style.scss
@@ -121,19 +121,30 @@
   overflow: hidden;
   height: 0;
   opacity: 0;
-  visibility: hidden;
   transition: all 0.5s ease-in-out;
-  transition-property: opacity, height, visibility;
+  transition-property: opacity, height;
 
   &Slot {
     padding: var(--auro-size-xl);
   }
 
+  &:not(&--isExpanded) {
+    .detailsSlot {
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+  }
+
   &--isExpanded {
     opacity: 1;
     height: auto;
-    visibility: visible;
   }
+}
+
+.detailsSlot {
+  height: 100%;
+  transition: all 0.5s ease-in-out;
+  transition-property: padding, height;
 }
 
 %lowProfile {
